--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set PORT=5052 && node index.js",
+    "start": "PORT=5052 node index.js",
     "devStart": "nodemon index.js"
   },
   "keywords": [],
